--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YBDownload</title>
+    <title>YBDownloader</title>
     <style>
       html {
         background-color: hsl(222 47% 11%);
